--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [package]
 name = "block-decomposition"
+description = "Rust implementation of mahjong hand decomposition"
 version = "0.1.0"
+authors = ["Apricot S."]
 edition = "2024"
 rust-version = "1.90"
+license = "MIT-0"
+readme = "README.md"
+repository = "https://github.com/Apricot-S/block-decomposition"
+keywords = ["mahjong", "riichi"]
+categories = ["algorithms"]
